Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.23.0, proton-c-0.24.0
-
None
Description
The source tree reorganisation moved setting the CXX_WARNING_FLAG variable into the c compilation tree of proton. These variables are inherited downwards in the build tree.
Since the C++ code is not in the directory heirarchy below the setting of the variables the warning flags are not set for the C++ builds any more .
So for some number of weeks we have not been getting adequate build warnings on our C++ code.