PROTON-1881: Fix c++ flags (warnings etc.) - Also fix a couple of issues that crept in whilst warnings were gone